<resources>
    <string name="app_name">SESHealthPatient</string>
    <string name="username_txt">Username</string>
    <string name="email_example_com">email@example.com</string>
    <string name="password_txt">Password</string>
    <string name="log_in_txt">Log In</string>
    <string name="first_name_hint">First Name</string>
    <string name="last_name_hint">Last Name</string>
    <string name="height_hint">Height</string>
    <string name="weight_hint">Weight</string>
    <string name="medical_condition_hint">Medical Condition</string>
    <string name="login_activity_title">Log In</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="patient_information">Patient Information</string>
    <string name="update_patient_information">Update Patient Information</string>
    <string name="view_mydoctors">My Doctors</string>
    <string name="doctor_information">Doctor Information</string>
    <string name="update_doctor_information">Update Doctor Information</string>
    <string name="create_data_packet">Create Data Packet</string>
    <string name="list_data_packet">List Data Packet</string>
    <string name="list_patient">List Patient</string>
    <string name="heart_rate">Heart Rate</string>
    <string name="record_video">Record Video</string>
    <string name="send_local_file">Send Local File</string>
    <string name="facilities_map">Facilities Map</string>
    <string name="doctor_ID">Doctor ID here!</string>
    <string name="addDoctor">Add</string>
    <string name="searchDoctor">Search</string>
    <string name="login_message">Logging in ...</string>
    <string name="feedback_txt">Feedback for this datapacket!</string>

    <string name="drawer_open">Drawer Open</string>
    <string name="drawer_close">Drawer Close</string>


    <string name="googledrive">Choose from Google Drive</string>
    <string name="dropbox">Choose from Dropbox</string>

    <string name="remove_button">REMOVE</string>

    <!--  DATA PACKET STRINGS  -->
    <string name="data_packet_send">Send</string>

    <string name="text_input_hint">Describe your problem</string>
    <string name="text_input_label">Description</string>
    <string name="map_location_label">Location</string>
    <string name="add_doctor_label">Select Doctor</string>
    <string name="heart_rate_label">Heart Rate</string>
    <string name="supp_files_label">Supplementary Files</string>
    <string name="record_videos_label">Video Snippets</string>

    <string name="select_file_title">Select a File</string>
    <string name="file_not_selected">No file selected.</string>
    <string name="read_failed">Failed to read metadata</string>

    <string name="data_packet_empty_hint">The data packet is currently empty, tap \"≡\" to add data.</string>
    <string-array name="usertype_array">
        <item>Patient</item>
        <item>Doctor</item>
    </string-array>
    <string-array name="gender_array">
        <item>Male</item>
        <item>Female</item>
    </string-array>
    <string name="title_activity_maps">Map</string>
    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyAg4LRDbxfCeOPV1m5BIY5Y59w6f6FlIXk</string>
    <string name="google_server_key">AIzaSyCTAXWC0zBEdaBA7o6xRqUYhCZ0e9hiv3U</string>
</resources>
