<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.v7.widget.CardView
        android:id="@+id/crdTextInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="-1dp"
        android:layout_margin="10dp">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/etDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/text_input_hint"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:layout_marginTop="-5dp"
                app:met_minCharacters="0"
                app:met_maxCharacters="500"
                app:met_floatingLabel="highlight"
                app:met_floatingLabelText="@string/text_input_label"
                app:met_floatingLabelAnimating="true"
                app:met_primaryColor="@color/colorAccent"
                android:layout_below="@id/lblTextInput"/>

            <Button
                android:id="@+id/btnRemove"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@id/lblTextInput"
                android:layout_alignTop="@id/lblTextInput"
                android:backgroundTint="@color/redColor"
                android:layout_alignParentEnd="true"
                android:textSize="13dp"
                android:text="@string/remove_button" />

            <TextView
                android:id="@+id/lblTextInput"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:elevation="10dp"
                android:paddingBottom="5dp"
                android:paddingTop="5dp"
                android:text="@string/text_input_label"
                android:textSize="20dp"
                android:layout_centerHorizontal="true"/>

        </RelativeLayout>

    </android.support.v7.widget.CardView>

</RelativeLayout>