<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="28dp"
        android:background="@color/dark_navy" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Your Name: "/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:id="@+id/Name_txt"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Your UID: "/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/ID_txt"
            android:text=""/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>


    <EditText
        android:id="@+id/doctorID_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/doctor_ID"
        android:text=""/>

    <TextView
        android:id="@+id/result_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:text=""/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <Button
            android:id="@+id/searchDoctor_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/searchDoctor" />

        <Button
            android:id="@+id/addDoctor_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/addDoctor"/>

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Your doctor list:" />

    <ListView
        android:id="@+id/doctor_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />


</LinearLayout>