<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="yourteamnumber.seshealthpatient.Fragments.PatientInformationFragment">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp"
        tools:context=".MainActivity">

        <ImageView
            android:id="@+id/patient_image_view"
            android:layout_width="140dp"
            android:layout_height="140dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            app:srcCompat="@drawable/patient_icon" />

        <ScrollView
            android:id="@+id/patient_scroll_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/patient_buttons_layout"
            android:layout_below="@+id/patient_image_view">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/patient_firstNameU"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/txtInputTopBar"
                android:layout_marginEnd="30dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/opensans_light"
                android:hint="@string/first_name_hint"
                android:typeface="sans"
                app:met_textColorHint="@color/hint_gray"
                app:met_floatingLabel="highlight"
                app:met_floatingLabelAnimating="true"
                app:met_floatingLabelText="@string/first_name_hint"
                app:met_clearButton="true"
                app:met_maxCharacters="30"
                app:met_minCharacters="1"
                app:met_primaryColor="@color/colorAccent" />

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/patient_lastNameU"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/patient_firstNameU"
                android:layout_marginEnd="30dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/opensans_light"
                android:hint="@string/last_name_hint"
                android:typeface="sans"
                app:met_textColorHint="@color/hint_gray"
                app:met_floatingLabel="highlight"
                app:met_floatingLabelAnimating="true"
                app:met_floatingLabelText="@string/last_name_hint"
                app:met_clearButton="true"
                app:met_maxCharacters="50"
                app:met_minCharacters="1"
                app:met_primaryColor="@color/colorAccent" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tvGender"
                    android:layout_marginTop="30dp"
                    android:layout_below="@id/patient_lastNameU"
                    android:layout_alignStart="@id/patient_lastNameU"
                    android:fontFamily="@font/opensans_light"
                    android:textSize="20dp"
                    android:text="I am a"/>
                
                <com.jaredrummler.materialspinner.MaterialSpinner
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/spinnerU"
                    android:layout_toRightOf="@id/tvGender"
                    android:layout_alignBottom="@id/tvGender"
                    android:layout_alignParentEnd="true"
                    android:layout_marginStart="30dp"
                    android:layout_marginEnd="30dp"/>

                <com.rengwuxian.materialedittext.MaterialEditText
                    android:id="@+id/patient_heightU"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tvGender"
                    android:layout_marginEnd="30dp"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/opensans_light"
                    android:hint="@string/height_hint"
                    android:typeface="sans"
                    android:inputType="numberDecimal"
                    app:met_textColorHint="@color/hint_gray"
                    app:met_floatingLabel="highlight"
                    app:met_floatingLabelAnimating="true"
                    app:met_floatingLabelText="@string/height_hint"
                    app:met_clearButton="true"
                    app:met_maxCharacters="3"
                    app:met_minCharacters="2"
                    app:met_primaryColor="@color/colorAccent" />

                <com.rengwuxian.materialedittext.MaterialEditText
                    android:id="@+id/patient_weightU"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/patient_heightU"
                    android:layout_marginEnd="30dp"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/opensans_light"
                    android:hint="@string/weight_hint"
                    android:typeface="sans"
                    android:inputType="numberDecimal"
                    app:met_textColorHint="@color/hint_gray"
                    app:met_floatingLabel="highlight"
                    app:met_floatingLabelAnimating="true"
                    app:met_floatingLabelText="@string/weight_hint"
                    app:met_clearButton="true"
                    app:met_maxCharacters="3"
                    app:met_minCharacters="2"
                    app:met_primaryColor="@color/colorAccent" />

                <com.rengwuxian.materialedittext.MaterialEditText
                    android:id="@+id/patient_medicalConditionU"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/patient_weightU"
                    android:layout_marginEnd="30dp"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="20dp"
                    android:fontFamily="@font/opensans_light"
                    android:hint="@string/medical_condition_hint"
                    android:typeface="sans"
                    app:met_textColorHint="@color/hint_gray"
                    app:met_floatingLabel="highlight"
                    app:met_floatingLabelAnimating="true"
                    app:met_floatingLabelText="@string/medical_condition_hint"
                    app:met_clearButton="true"
                    app:met_maxCharacters="200"
                    app:met_minCharacters="1"
                    app:met_primaryColor="@color/colorAccent" />

            </RelativeLayout>

        </ScrollView>

        <LinearLayout
            android:id="@+id/patient_buttons_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:gravity="center">

            <Button
                android:id="@+id/updateButton"
                android:layout_width="152dp"
                android:layout_height="wrap_content"
                android:background="@color/dark_navy"
                android:text="update"
                android:textColor="@color/whiteColor"
                android:textSize="18sp" />
        </LinearLayout>
    </RelativeLayout>


</FrameLayout>