<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/dataPacketContainer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/data_packet_bg"
    tools:context="yourteamnumber.seshealthpatient.Fragments.DataPacketFragment">
    <!-- TODO: Update blank fragment layout -->
    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:id="@+id/doctorIdContainer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <com.github.captain_miao.optroundcardview.OptRoundCardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginTop="5dp"
                    app:optRoundCardBottomEdges="true"
                    app:optRoundCardCornerRadius="8dp">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="100dp">

                        <TextView
                            android:id="@+id/lblAddDoctor"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_centerHorizontal="true"
                            android:background="@drawable/rounded_corner_red"
                            android:elevation="1dp"
                            android:fontFamily="@font/opensans_bold"
                            android:paddingTop="5dp"
                            android:text="@string/add_doctor_label"
                            android:textAlignment="center"
                            android:textColor="@color/whiteColor"
                            android:textSize="20dp" />

                        <Spinner
                            android:id="@+id/spnSelectDoctor"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_below="@id/lblAddDoctor">

                        </Spinner>

                    </RelativeLayout>
                </com.github.captain_miao.optroundcardview.OptRoundCardView>
            </RelativeLayout>

            <yourteamnumber.seshealthpatient.Model.DataPacket.CustomComponents.TextInputComponent
                android:id="@+id/textInputComponent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@id/doctorIdContainer">

            </yourteamnumber.seshealthpatient.Model.DataPacket.CustomComponents.TextInputComponent>

            <RelativeLayout
                android:id="@+id/mapContainer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/textInputComponent">

                <com.github.captain_miao.optroundcardview.OptRoundCardView
                    android:id="@+id/top_card_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginTop="5dp"
                    app:optRoundCardBottomEdges="true"
                    app:optRoundCardCornerRadius="8dp">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="300dp">

                        <TextView
                            android:id="@+id/lblMapLocation"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_centerHorizontal="true"
                            android:background="@drawable/rounded_corner_green"
                            android:elevation="1dp"
                            android:fontFamily="@font/opensans_bold"
                            android:paddingTop="5dp"
                            android:text="@string/map_location_label"
                            android:textAlignment="center"
                            android:textColor="@color/whiteColor"
                            android:textSize="20dp" />

                        <Button
                            android:id="@+id/addLocationButton"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerInParent="true"
                            android:text="Add Location" />

                        <com.google.android.gms.maps.MapView
                            android:id="@+id/mapView2"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent" />

                    </RelativeLayout>
                </com.github.captain_miao.optroundcardview.OptRoundCardView>
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/suppFilesContainer"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_below="@id/mapContainer"

                android:layout_weight="1">

                <com.github.captain_miao.optroundcardview.OptRoundCardView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="5dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginTop="5dp"
                    app:optRoundCardBackgroundColor="@color/whiteColor"
                    app:optRoundCardBottomEdges="true"
                    app:optRoundCardCornerRadius="8dp">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">


                        <RelativeLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/suppFilesHeader">

                            <TextView
                                android:id="@+id/lblSuppFiles"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_centerHorizontal="true"
                                android:background="@drawable/rounded_corner_orange"
                                android:elevation="1dp"
                                android:fontFamily="@font/opensans_bold"
                                android:paddingTop="5dp"
                                android:text="@string/supp_files_label"
                                android:layout_alignBottom="@id/btnAddFiles"
                                android:paddingStart="15dp"
                                android:gravity="center_vertical"
                                android:textColor="@color/whiteColor"
                                android:textSize="20dp" />

                            <Button
                                android:id="@+id/btnAddFiles"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_alignParentEnd="true"
                                android:text="Add" />

                        </RelativeLayout>

                        <ListView
                            android:id="@+id/suppList"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_below="@id/suppFilesHeader"/>




                    </RelativeLayout>
                </com.github.captain_miao.optroundcardview.OptRoundCardView>

            </RelativeLayout>


            <RelativeLayout
                android:id="@+id/recordVideosContainer"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_below="@id/suppFilesContainer"

                android:layout_weight="1">

                <com.github.captain_miao.optroundcardview.OptRoundCardView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="5dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginTop="5dp"
                    app:optRoundCardBackgroundColor="@color/whiteColor"
                    app:optRoundCardBottomEdges="true"
                    app:optRoundCardCornerRadius="8dp">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">


                        <RelativeLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/recVideosHeader">

                            <TextView
                                android:id="@+id/lblRecordVideos"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_centerHorizontal="true"
                                android:background="@drawable/rounded_corner_gray"
                                android:elevation="1dp"
                                android:fontFamily="@font/opensans_bold"
                                android:paddingTop="5dp"
                                android:text="@string/record_videos_label"
                                android:layout_alignBottom="@id/btnRecordVideo"
                                android:paddingStart="15dp"
                                android:gravity="center_vertical"
                                android:textColor="@color/whiteColor"
                                android:textSize="20dp" />

                            <Button
                                android:id="@+id/btnRecordVideo"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_alignParentEnd="true"
                                android:text="Add" />

                        </RelativeLayout>

                        <ListView
                            android:id="@+id/suppVideos"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_below="@id/recVideosHeader"/>

                    </RelativeLayout>
                </com.github.captain_miao.optroundcardview.OptRoundCardView>

            </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/heartRateContainer"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_below="@id/recordVideosContainer"
                    >

                    <com.github.captain_miao.optroundcardview.OptRoundCardView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginBottom="5dp"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:layout_marginTop="5dp"
                        app:optRoundCardBackgroundColor="@color/lightRedColor"
                        app:optRoundCardBottomEdges="true"
                        app:optRoundCardCornerRadius="8dp">

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">

                            <ImageButton
                                android:id="@+id/btnHeartRate"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:background="@null"
                                android:padding="10dp"
                                android:scaleType="fitCenter"
                                android:src="@drawable/ic_heart_black_24dp"
                                android:visibility="visible" />

                            <TextView
                                android:id="@+id/txtHeartRate"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_centerInParent="true"
                                android:fontFamily="@font/opensans_bold"
                                android:text="87 BPM"
                                android:textColor="@color/redColor"
                                android:textSize="24sp" />
                        </RelativeLayout>

                    </com.github.captain_miao.optroundcardview.OptRoundCardView>

                </RelativeLayout>

            <com.unstoppable.submitbuttonview.SubmitButton
                android:id="@+id/submitbutton"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_below="@id/heartRateContainer"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                app:buttonColor="@color/dark_navy"
                app:buttonTextSize="25dp"
                app:buttonText="Send" />

        </RelativeLayout>
    </ScrollView>

</RelativeLayout>
